--- a/source/sass/blocks/emotions.scss
+++ b/source/sass/blocks/emotions.scss
@@ -1,16 +1,15 @@
-// .emotions {}
-// .emotions__title {}
-// .emotions__text {}
-
 .emotions {
   width: 100%;
 }
 
+// .emotions__title {}
+
 .emotions__text {
   width: 100%;
   height: 160px;
+  margin-top: -5px;
   padding-left: 21px;
-  padding-top: 22px;
+  padding-top: 15px;
   padding-right: 33px;
   resize: none;
 
@@ -27,24 +26,20 @@
 
 @media (min-width: $tablet-width) {
   .emotions__title {
-    &::before {
-      @include draw-line-left($t:36px, $l:0, $w:100px);
-    }
+    padding-top: 14px;
+  }
 
-    &::after {
-      @include draw-line-right($t:36px, $r:0, $w:100px);
-    }
+  .emotions__text {
+    margin-top: 37px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .emotions__title {
-    &::before {
-      @include draw-line-left($t:36px, $l:0, $w:260px);
-    }
+    padding-top: 50px;
+  }
 
-    &::after {
-      @include draw-line-right($t:36px, $r:0, $w:260px);
-    }
+  .emotions__text {
+    margin-top: 37px;
   }
 }
