--- a/source/sass/blocks/impression.scss
+++ b/source/sass/blocks/impression.scss
@@ -1,11 +1,26 @@
 //.impression {}
+//.impression__title {}
+
+.impression__item {
+  &:first-of-type {
+    margin-top: 4px;
+  }
+
+  &:nth-of-type(n+2) {
+    margin-top: 18px;
+  }
+}
+
+.impression__block {
+  margin-left: 3px;
+}
 
 .impression__label {
   position: relative;
 
   display: block;
   height: 51px;
-  padding-left: 75px;
+  padding-left: 77px;
   padding-top: 12px;
   margin-bottom: 23px;
 
@@ -44,7 +59,7 @@
   }
 }
 
-.impression__item {
+.impression__input {
   &:checked + .impression__label::before {
     background-color: $elem-outer-hover-color;
   }
@@ -73,5 +88,37 @@
 
   &:focus + .impression__label {
     color: lighten($secondary-text-color, 50%);
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .impression__title {
+    text-align: left;
+  }
+
+  .impression__block {
+    margin-top: 40px;
+  }
+
+  .impression__label {
+    padding-left: 73px;
+  }
+
+  .impression__item:nth-of-type(n+1) {
+    margin-bottom: 28px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .impression__title {
+    padding-left: 79px;
+  }
+
+  .impression__block {
+    margin-left: 7px;
+  }
+
+  .impression__label {
+    padding-left: 73px;
   }
 }
