--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -1,8 +1,8 @@
 //.media { //outline: 1px dotted green; }
 
 .media__wrap {
-  margin-top: 44px;
-  margin-bottom: 25px;
+  margin-top: 38px;
+  margin-bottom: 29px;
   padding-left: 5px;
   padding-right: 5px;
 }
@@ -13,7 +13,7 @@
 
 .media__title {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 
   @include set-font($fz:18px, $lh:26px, $ta:center);
 }
@@ -21,4 +21,24 @@
 .media__text {
   @include set-font($fz:14px, $lh:24px, $fw:normal, $ta:center);
   color: $color-grey;
+}
+
+@media (min-width: $tablet-width) {
+  .media__wrap {
+    margin: 75px 110px 68px;
+    padding: 0;
+  }
+
+  .media__title {
+    margin-bottom: 30px;
+
+    font-size: 30px;
+    line-height: 26px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .media__wrap {
+    margin: 110px 386px 71px;
+  }
 }
