--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -1,15 +1,18 @@
 @charset "UTF-8";
 
 .menu {
-  min-height: 56px;
-  margin: 0 auto;
+  min-height: 55px;
+  //margin: 0 auto;
 
-  font-size: 18px;
-  line-height: 40px;
-  text-align: center;
+  @include set-font($fz:18px, $lh:40px, $fw:700, $ta:center);
 
   background-color: $primary-color;
 }
+
+$bg-btn-hover: #669ec0;
+$bg-btn-down: #5496bd;
+$bg-btn-disabled: #e5e5e5;
+$color-btn-down:hsla(0, 0%, 100%, 0.3); //#ffffff, opacity:0.3
 
 .menu__item {
   padding-top: 10px;
@@ -20,11 +23,28 @@
   & a {
     color: $primary-text-color;
   }
+
+  &:hover {
+    background-color: $bg-btn-hover;
+  }
+
+  &:active {
+    background-color: $bg-btn-down;
+  }
+
+  &:active a {
+    color: $color-btn-down;
+  }
 }
 
 @media (min-width: $tablet-width) {
   .menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
     max-width: $tablet-width;
+    min-height: 56px;
 
     font-size: 14px;
     line-height: 26px;
@@ -33,8 +53,53 @@
   }
 
   .menu__item {
+    //outline: 1px dotted grey;
+    width: 153px;
+    padding: 0;
+    box-shadow: none;
+
+    &:nth-of-type(4n + 2) {
+      margin-right: auto;
+    }
+
+    &:nth-of-type(2) {
+      margin-right: 156px;
+    }
+
     & a {
+      display: block;
+      padding-top: 15px;
+      padding-bottom: 15px;
+
       color: $secondary-text-color;
+    }
+
+    &:hover {
+      background-color: transparent;
+    }
+
+    &:hover a {
+      color:#81b3d2;
+    }
+
+    &:active {
+      background-color: transparent;
+    }
+
+    &:active a {
+      color: rgba(0, 0, 0, 0.3);
+    }
+
+    &--active a {
+      color: #766357;
+    }
+
+    &--active a:hover {
+      color: #604e43;
+    }
+
+    &--active a:active {
+      color: rgba(118, 99, 87, 0.3);
     }
   }
 }
@@ -42,5 +107,17 @@
 @media (min-width: $desktop-width) {
   .menu {
     max-width: $desktop-width;
+  }
+
+  .menu__item {
+    width: 239px;
+
+    &:nth-of-type(4n + 2) {
+      margin-right: auto;
+    }
+
+    &:nth-of-type(2) {
+      margin-right: 244px;
+    }
   }
 }
