--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,14 +1,11 @@
-@charset "UTF-8";
-
 .page-header {
-  position: relative;
   display: flex;
   flex-direction: column;
 
   width: 320px;
   margin: 0 auto;
 
-  @include box-shadow-left-right();
+  background-color: $bg-main-color;
 }
 
 .page-header__logo {
@@ -19,9 +16,9 @@
   height: 56px;
 }
 
-.page-header__logo::after {
-  @include insert-image($t:16px, $r:16px, $w:23px, $h:21px, $bi:url("../../img/icon-menu.svg"));
-}
+// .page-header__logo::after {
+//   @include insert-image($t:16px, $r:19px, $w:23px, $h:21px, $bi:url("../../img/icon-menu.svg"));
+// }
 
 .page-header__logo-image {
   position: absolute;
@@ -32,7 +29,7 @@
 
 @media (min-width: $tablet-width) {
   .page-header {
-    width: auto;
+    width: $tablet-width;
   }
 
   .page-header__logo {
@@ -40,12 +37,6 @@
     height: 0;
   }
 
-  .page-header__logo::after {
-    background-image: none;
-  }
-}
-
-@media (min-width: $tablet-width) {
   .page-header__logo-image {
     @include replace-image($bi:url("../../img/logo-sedona-tablet.svg"), $w:102px, $h:83px);
     z-index: 1;
@@ -53,6 +44,10 @@
 }
 
 @media (min-width: $desktop-width) {
+  .page-header {
+    width: $desktop-width;
+  }
+
   .page-header__logo-image {
     @include replace-image($bi:url("../../img/logo-sedona-desktop.svg"), $w:188px, $h:96px);
   }
