--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,7 +1,9 @@
-// .video {}
+.video {
+  padding-bottom: 32px;
+}
 
 .video__words-wrap {
-  padding: 20px 42px;
+  padding: 32px 42px;
 }
 
 .video__title {
@@ -13,6 +15,9 @@
 }
 
 .video__text {
+  margin-top: 26px;
+  margin-bottom: 3px;
+
   @include set-font($fz:14px, $lh:24px, $fw:normal);
   color: $color-grey;
   text-align: center;
@@ -47,8 +52,25 @@
 }
 
 @media (min-width: $tablet-width) {
+  .video {
+    padding-bottom: 40px;
+  }
+
+  .video__words-wrap {
+    margin: 68px 176px 75px;
+    padding: 0;
+  }
+
+  .video__title {
+    font-size: 30px;
+    line-height: 26px;
+  }
+
+  .video__text {
+    margin-top: 30px;
+  }
+
   .video__video {
-    outline: 1px dotted grey;
     width: 648px;
     height: 499px;
     background-image: url("../../img/video-tablet@1x.jpg");
@@ -61,8 +83,15 @@
 }
 
 @media (min-width: $desktop-width) {
+  .video {
+    padding-bottom: 86px;
+  }
+
+  .video__words-wrap {
+    margin: 72px 392px 72px;
+  }
+
   .video__video {
-    outline: 2px dotted yellowgreen;
     width: 800px;
     height: 500px;
     background-image: url("../../img/video-desktop@1x.jpg");
