13. начинаю подготовку адапт. графики

--- a/source/sass/blocks/invitation.scss
+++ b/source/sass/blocks/invitation.scss
@@ -89,8 +89,13 @@
   }
 
   .invitation__wrap {
+    padding-top: 36px;
     padding-left: 380px;
     padding-right: 380px;
+  }
+
+  .invitation__text {
+    margin-top: 25px;
   }
 
   .invitation__button {
