--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -117,4 +117,12 @@
     padding-left: 57px;
     padding-right: 58px;
   }
+
+  .location__number {
+    margin-bottom: 21px;
+  }
+
+  .location__text {
+    margin-left: -2px;
+  }
 }
