--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -11,12 +11,16 @@
 }
 
 .main-nav--closed .main-nav__toggle {
-  @include insert-image($t:16px, $r:19px, $w:23px, $h:22px, $bi:url("../../img/icon-menu.svg"));
+  @media (max-width: $mobile-width-only) {
+    @include insert-image($t:16px, $r:19px, $w:23px, $h:22px, $bi:url("../../img/icon-menu.svg"));
+  }
   cursor: pointer;
 }
 
 .main-nav--opened .main-nav__toggle {
-  @include insert-image($t:16px, $r:19px, $w:23px, $h:21px, $bi:url("../../img/icon-cross.svg"));
+  @media (max-width: $mobile-width-only) {
+    @include insert-image($t:16px, $r:19px, $w:23px, $h:21px, $bi:url("../../img/icon-cross.svg"));
+  }
 }
 
 @media (max-width: $mobile-width-only) {
