--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -42,6 +42,12 @@
   z-index: 1;
 }
 
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .video__video {
+    background-image: url("../../img/video-mobile@2x.jpg");
+  }
+}
+
 .video__controls {
   position: relative;
 
@@ -77,6 +83,12 @@
     background-size: 648px 499px;
   }
 
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    .video__video {
+      background-image: url("../../img/video-tablet@2x.jpg");
+    }
+  }
+
   .video__controls {
     width: 648px;
   }
@@ -96,6 +108,12 @@
     height: 500px;
     background-image: url("../../img/video-desktop@1x.jpg");
     background-size: 800px 500px;
+  }
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    .video__video {
+      background-image: url("../../img/video-desktop@2x.jpg");
+    }
   }
 
   .video__controls {
