--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,6 +13,8 @@ $mobile-width: 320px;
 $mobile-width-only: 767px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
 
 // зазоры слева/справа на устройствах
 $gap-mobile: 20px;
